--- a/scss/layout/_footer.scss
+++ b/scss/layout/_footer.scss
@@ -8,6 +8,7 @@
 
 .footer {
     display: flex;
+    width: 100%;
     flex-direction: column;
     padding-top: 25px;
     background-color: #353535;
