--- a/scss/layout/_homepage-media.scss
+++ b/scss/layout/_homepage-media.scss
@@ -54,9 +54,11 @@
 
         &__container {
             flex-direction: column;
+            width: 100%;
         }
         &__card {
-            width: 90%;
+            flex-direction: column;
+            width: 100%;
         }
 
         &__card-img-1,
@@ -66,21 +68,6 @@
             height: 150px;
         }
 
-        &__card-img-1 {
-            object-position: left bottom;
-        }
-
-        &__card-img-2 {
-            object-position: 0px -137px;
-        }
-
-        &__card-img-3 {
-            object-position: 0px -50px;
-        }
-
-        &__card-img-4 {
-            object-position: 0px -50px;
-        }
         /*-- HEART--*/
 
         &__card-icon {
@@ -138,14 +125,12 @@
 
     .restaurant {
         &__wrap {
-            // outline: 3px solid red;
             display: flex;
             flex-direction: column;
             width: 100%;
         }
 
         &__container {
-            // outline: 3px solid green;
             display: flex;
             flex-direction: row;
             flex-wrap: wrap;
