--- a/scss/layout/_menu-media.scss
+++ b/scss/layout/_menu-media.scss
@@ -1,9 +1,9 @@
 @media screen and (max-width: 767px) { 
 
-    // .header__return {
-    //     top: 4%;
-    //     left: 10%;
-    // }
+    .header__return {
+        top: 4%;
+        left: 10%;
+    }
 
     .menu__image {
         width: 100%;
@@ -11,25 +11,22 @@
     }
 
     .menu__title {
-        margin: 15px 0 0 18px;
+        margin: 15px 0 0 45px;
     }
 
 /*-- HEART--*/
 
     .menu__title-icon {
-        top: 2%;
-        left: 89%;
+        top: 1%;
+        left: 50%;
     }
 
 /*-- CARDS--*/
-    // .menu__choices-title {
-    //     margin: 30px 0 20px 18px;
-    // }
+
     .choice {
 
         &__dish {
             width: 90%;
-            margin-left: 18px;
         }
 
         &__dish:hover {
@@ -44,15 +41,12 @@
     }
 }
 
-
-
-
 @media screen and (max-width: 992px) and (min-width: 767px) {
 
-    // .header__return {
-    //     top: 1%;
-    //     left: 5%;
-    // }
+    .header__return {
+        top: 1%;
+        left: 5%;
+    }
 
     .menu__image {
         height: 200px;
@@ -66,15 +60,10 @@
 
     .menu__title-icon {
         top: 2.2%;
-        left: 92.5%;
+        left: 88%;
     }
 
 /*-- CARDS--*/
-
-    // .menu__choices-title {
-    //     margin: 30px 0 20px 40px;
-    // }
-
     .choice {
         &__dish {
             width: 90%;
@@ -94,58 +83,48 @@
     }
 }
 
-@media screen and (min-width: 993px) {
+// @media screen and (min-width: 993px) {
 
-    * {
-        padding: 0;
-        margin: 0;
-    }
+//     * {
+//         padding: 0;
+//         margin: 0;
+//     }
 
-    // .header__return {
-    //     top: 4.5%;
-    //     left: 2%;
-    // }
+//     .menu__image {
+//         height: 200px;
+//     }
 
-    .menu__image {
-        height: 200px;
-    }
+//     .menu__title {
+//         margin: 15px 0 0 50px;
+//     }
 
-    .menu__title {
-        margin: 15px 0 0 35px;
-    }
+// /*-- HEART--*/
 
-/*-- HEART--*/
+//     .menu__title-icon {
+//         top: 6.5%;
+//         left: 90%;
+//     }
 
-    .menu__title-icon {
-        top: 6.5%;
-        left: 97.2%;
-    }
+// /*-- CARDS--*/
 
-/*-- CARDS--*/
+// .course__dishes {
+//         display: flex;
+//         flex-direction: row;
+//         justify-content: space-around;
+//     }
 
-.course__dishes {
-        display: flex;
-        flex-direction: row;
-        justify-content: space-around;
-    }
+//     .course {
+//         width: 100%;
+//     }
 
-    .course {
-        width: 100%;
-    }
+//     .course__dish:hover {
+//         .dish__text {
+//             width: 55%;
+//         }
+//     } 
 
-    // .menu__choices-title {
-    //     width: 85%;
-    //     margin: 30px 0 20px 35px;
-    // }
+//     .dish__description {
+//         font-size: 14px;
+//     }
 
-    .course__dish:hover {
-        .dish__text {
-            width: 55%;
-        }
-    } 
-
-    .dish__description {
-        font-size: 14px;
-    }
-
-}
+// }
