--- a/scss/layout/_menu.scss
+++ b/scss/layout/_menu.scss
@@ -28,6 +28,7 @@
         flex-direction: column;
         position: relative;
         margin-top: 0;
+        width: 100%;
         background-color: #EAEAEA;
     }
 
@@ -47,7 +48,7 @@
         font-weight: 400;
         padding-bottom: 3px;
         border-bottom: solid 3px;
-        margin: .75% .75% .75% 1%;
+        margin: 1% .75% 2% 1%;
         border-image: linear-gradient(to right, #99e2d0 10%, #EAEAEA 10%) 100% 1;
     }
 
@@ -55,9 +56,8 @@
     .menu__title-icon {
         display: inline-block;
         position: absolute;
-        left: 97.2%;
-        // margin-top: 10px;
-        padding-top: 1.5%;
+        left: 96%;
+        top: 2%;
         font-size: 20px;
     }
 
@@ -97,7 +97,9 @@
 
     /*-- Cards--*/
     .course {
+        // display: flex;
         margin: 1.2%;
+        // flex-direction: column;
         &__dishes {
             display: flex;
             flex-direction: column;
@@ -112,6 +114,7 @@
             border-radius: 15px;
             width: 80%;
             margin: 0 auto;
+            // margin-right: 1%;
             background-color: #fff;
             
             height: 80px;
